<resources>
    <string name="app_name">Mazyoona</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="shipping_note">Please make sure the entered address is correct before proceeding to payment</string>

    <string name="slide_1_title">ABAYA</string>
    <string name="slide_1_desc">Outer garment worn by women in some parts of Middle East, particularily Saudi Arabia and the Arabian Gulf region </string>

    <string name="slide_2_title">BAGS</string>
    <string name="slide_2_desc">A hands-free shoulder bag, the ideal clutch for a night out or an office friendly tote,this is your one stop shop for finding every handbag you need</string>

    <string name="slide_3_title">Jewellery</string>
    <string name="slide_3_desc">Thousands of designs of jewelery are avaliable in an Arabesque style with a comtemporary twist to cater to the local market </string>

    <string name="slide_4_title">Kaftan</string>
    <string name="slide_4_desc">Kaftan is a collection of casual,comfortable,versatile lifestyle dressing that is effortlessly stylish made from quality fabrics in gorgeous bright colours and parts elevating and energizing your spirit</string>

    <string name="slide_5_title">ACCESSORIES</string>
    <string name="slide_5_desc">Dubai and UAE have varying degrees of tolerance for clothing styles from across the world.Nevertheless, dress code in Dubai is quite liberal</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="products">ALL PRODUCTS</string>

    <string name="edit_info">Your subtotal will be updated when you save your cart</string>
    <string name="check_out">Check Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_address">Address</string>
    <string name="hint_address_2">Address 2</string>
    <string name="hint_password">Password</string>
    <string name="hint_country">Country</string>
    <string name="hint_state">State</string>
    <string name="hint_zip">Zip Code</string>
    <string name="hint_cpassword">Confirm Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_fname">Full Name</string>
    <string name="hint_uname">User Name</string>
    <string name="hint_lname">Last Name</string>
    <string name="hint_phone">Mobile Number</string>
    <string name="hint_city">City</string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="btn_login">SIGN IN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="shipping_address">Shipping Address </string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="btn_forgot">SEND</string>
    <string name="submit">SUBMIT</string>
    <string name="forgot">Forgot Password?</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="user_name">Name</string>
    <string name="phone">Phone No</string>
    <string name="product_desc">Product Descrption</string>
    <string name="browse_by_category">Browse By Category</string>
    <string name="featured_product">Featured Products</string>
    <string name="no_search_result">No search result found</string>
    <string name="no_internet">Please check your internet and try again</string>
    <string name="no_product">Uh Oh! No Products here..</string>
    <string name="start_shopping">START SHOPPING</string>
    <string name="see_all">See All</string>
    <string name="buy_now">Buy Now</string>
    <string name="spinner_prompt">Dubai</string>
    <string name="billing_address">Billing Address</string>
    <string name="address_you_entered"> ADDERESS YOU ENTERED</string>
    <string name="choose_deilvery_mode"> Choose Deilvery Mode</string>
    <string name="choose_payment_mode"> Choose Payment Mode</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="total_quanity">Total Quanity</string>
    <string name="merchandise_total">Merchandise Total</string>
    <string name="discount">Discount</string>
    <string name="shipping">Shipping</string>
    <string name="check_email">Please check your email for more details</string>
    <string name="tax">Tax</string>
    <string name="additional_charge">Additional Charge</string>
    <string name="grand_total">Grand Total</string>
    <string name="product_lowcase">Products</string>
    <string name="my_profile">My Profile</string>
    <string name="promo_code">Eg:EADCX124d</string>
    <string name="apply">APPLY</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="total">Total</string>
    <string name="sub_total">SUBTOTAL :</string>
    <string name="sign_in">Sign In</string>
    <string name="item_name">item name</string>
    <string name="remove">remove</string>
    <string name="cart_price">cart price</string>
    <string name="qty">qty</string>
    <string name="edit_cart">Edit Cart</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="do_you_have">Do You Have an Account With Mazyoona</string>
    <string name="skip_login">Skip login</string>

    <string name="use_this_address">Use This Address</string>
    <string name="change_address">Change Address</string>

    <string name="place_order">Place Order</string>
    <string name="log_out">LOG OUT</string>

    <string name="drawer_open">Open navigation drawer</string>

    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="register">SIGN UP</string>
    <string name="login">SIGN IN</string>

    <!-- Toolbar titles -->
    <string name="toolbar_title_home">Home</string>
    <string name="toolbar_title_explore">Explore</string>
    <string name="other_activity">Other Activity</string>

    <!-- Navigation Drawer -->
    <string name="nav_drawer_item_home">Home</string>
    <string name="nav_drawer_item_explore">Explore</string>
    <string name="nav_drawer_help_and_feedback"><![CDATA[Help & feedback]]></string>
    <string name="nav_drawer_about">About</string>
    <string name="navigation_drawer_opened">The navigation drawer is opened</string>
    <string name="navigation_drawer_closed">The navigation drawer is closed</string>
    <string name="tag_nav_drawer_main_entry">nav_drawer_main_entry</string>
    <string name="tag_nav_drawer_special_entry">nav_drawer_special_entry</string>
    <string name="tools_text_account_information_username">Username</string>
    <string name="tools_text_account_information_email">user@mail.com</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="powered_by">Powered by</string>
    <string name="faq">FAQ</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="shopping_cart_lowcase">Shopping Cart</string>
    <string name="special_offer">Special Offer</string>
    <string name="designer_list">Designer List</string>
    <string name="order_placed">Your Order is Placed</string>
    <string name="my_orders">MY ORDERS</string>
    <string name="my_orders_small">My Orders</string>

    <!-- Typeface names -->
    <string name="typeface_roboto_regular">Roboto-Regular</string>
    <string name="typeface_roboto_medium">Roboto-Medium</string>

    <string name="cart_1">Your Shopping Cart is Empty</string>
    <string name="cart_2">Sign in to view items that you added to your Cart</string>
    <string name="cart_3">Time to shop!</string>

    <string name="backdrop_title">DESIGNER MIM</string>
    <string name="backdrop_subtitle">UAE top designer collection</string>
</resources>
