<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_bg_new"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="155dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <com.mingle.BouncyEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/hint_email"
            android:drawableLeft="@drawable/user_login_icon"
            android:paddingRight="@dimen/space_2"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white">
    </com.mingle.BouncyEditText>

        <com.mingle.BouncyEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:paddingRight="@dimen/space_2"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittext_bg"
            android:textColorHint="@color/white"
            android:hint="@string/hint_password"
            android:drawableLeft="@drawable/password_login_icon"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/fpassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:layout_marginBottom="@dimen/space_1"
            android:textColor="@color/white"
            android:text="@string/forgot_password"/>
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:textSize="20sp"
            android:layout_marginTop="8dip"
            android:text="@string/btn_login"
            android:background="#7a1572"
            android:textColor="@color/white" />


    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/login_or"
        android:layout_marginTop="@dimen/space_8"
        android:layout_height="@dimen/text_size_32" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/do_you_have"
        android:textColor="@color/white"
        android:singleLine="true"
        android:id="@+id/title_text"
        android:layout_marginTop="@dimen/space_5"
        android:layout_gravity="center_horizontal" />


    <Button
        android:id="@+id/btnLinkToRegisterScreen"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="@dimen/space_10"
        android:text="@string/create_account"
        android:background="@drawable/edittext_bg"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/skip_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="@dimen/space_2"
        android:textColor="@color/white"
        android:text="@string/skip_login"/>

</LinearLayout>