<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/splash"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <com.mingle.BouncyEditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/hint_fname"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />



        <com.mingle.BouncyEditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <com.mingle.BouncyEditText
            android:id="@+id/phone"
            android:layout_width="fill_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <com.mingle.BouncyEditText
            android:id="@+id/city"
            android:layout_width="fill_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/hint_city"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <com.mingle.BouncyEditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="#7a1572"
            android:layout_marginTop="20dip"
            android:textSize="20sp"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textColor="@color/white" />


    </LinearLayout>

</LinearLayout>