<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/login_bg"
    android:padding="16dp" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_marginTop="180dp"
        android:id="@+id/welcome">

    <Button
        android:layout_width="250dp"
        android:layout_height="52dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="#7a1572"
        android:layout_gravity="center"
        android:id="@+id/button3" />

    <Button
        android:layout_width="250dp"
        android:layout_height="52dp"
        android:text="@string/register"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="#7a1572"
        android:id="@+id/button4"
        android:layout_marginTop="70dp"
        android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginBottom="@dimen/space_40"
            android:textColor="@color/white"
            android:text="@string/skip_login"
            android:id="@+id/skip_login"
            android:layout_gravity="center_horizontal|bottom" />

    </FrameLayout>
</LinearLayout>