<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
     >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/edit_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/cloth_1" />

        <TextView
            android:id="@+id/edit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/edit_img"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="21dp"
            android:layout_centerVertical="true"
            android:maxLines="4"
            android:ellipsize="end"
            android:layout_toLeftOf="@+id/edit_price"
            android:layout_toRightOf="@+id/edit_img"
            android:text="@string/item_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/edit_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/edit_name"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="5dp"
            android:text="@string/cart_price" 
            android:textColor="@color/orangered"
            android:textSize="23sp"/>

        <Button
            android:id="@+id/edit_del"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_alignLeft="@+id/edit_name"
            android:layout_below="@+id/edit_img"
            android:background="@color/text_color"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="15dp"
            android:text="@string/remove"
            android:textSize="14sp" />

        <Button
            android:id="@+id/edit_qty"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_below="@+id/edit_img"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/edit_del"
            android:background="@color/text_color"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:padding="5dp"
            android:text="@string/qty"
            android:textSize="14sp" />

    </RelativeLayout>

</LinearLayout>
