<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gridview_bg"
     >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:background="@drawable/header"
            android:layout_width="match_parent"
            android:layout_height="64dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/menu_icon"
                android:layout_marginRight="@dimen/space_25"
                android:layout_gravity="end"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_menu" />
        </android.support.v7.widget.Toolbar>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/space_1"
        android:id="@+id/welcome">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/check_out_four"
            android:id="@+id/button3" />


    </FrameLayout>
    <Button
        android:id="@+id/btnsampleee"
        android:layout_width="fill_parent"
        android:layout_height="32dp"
        android:textSize="20sp"
        android:gravity="left"
        android:paddingLeft="@dimen/space_15"
        android:text="@string/choose_deilvery_mode"
        android:textColor="@color/white"
        android:layout_marginTop="15dip"
        android:background="@color/text_color"
        />
    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical" >


        <RadioButton
            android:id="@+id/paypal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/paypal_s"
            android:checked="true"

            android:padding="5dp"
            />

    <!--    <RadioButton
            android:id="@+id/bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/space_3"
            android:drawableLeft="@drawable/pay_debit_s"
            android:padding="5dp"
            />-->

        <RadioButton
            android:id="@+id/cod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/space_3"
            android:drawableLeft="@drawable/cod_s"
            android:padding="5dp"
           />
    </RadioGroup>

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".PaymentPage" >


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:text="@string/total_quanity"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/total_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/name"
            android:layout_marginLeft="85dp"
            android:layout_toRightOf="@+id/name"
            android:hint="0" >
        </TextView>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/name"
            android:layout_below="@+id/name"
            android:layout_marginTop="10dp"
            android:text="@string/merchandise_total"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/total_sale_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_alignBottom="@+id/email"
            android:layout_toRightOf="@+id/email"
            android:text="ss"
            />
        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="10dp"
            android:text="@string/discount"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/total_purchase_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/phone"
            android:layout_marginLeft="112dp"
            android:layout_toRightOf="@+id/phone"
            android:text="0" >
        </TextView>

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="10dp"
            android:text="@string/shipping"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/shipping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/city"
            android:layout_marginLeft="115dp"
            android:layout_toRightOf="@+id/city"
            android:text="20 AED" >
        </TextView>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="10dp"
            android:text="@string/tax"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView8"
            android:layout_marginLeft="155dp"
            android:layout_toRightOf="@+id/textView8"
            android:text="$$$" >
        </TextView>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="178dp"
            android:layout_marginLeft="10dp"
            android:text="@string/grand_total"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/grandtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView9"
            android:layout_marginLeft="92dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_toRightOf="@+id/textView9"
            android:text="$$$" >
        </TextView>
        <Button
            android:id="@+id/place_order"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="220dip"
            android:layout_marginLeft="@dimen/space_5"
            android:gravity="center"
            android:background="@drawable/round_corner_button"
            android:text="@string/place_order"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </RelativeLayout>

</LinearLayout>